# cs6700_quaternion

./: CMakeLists.txt
lib/shaders/: shader.vert
res/shaders/: shader.frag
src/: camera.cpp  camera.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/light/: directional.cpp  directional.hpp  light.cpp  light.hpp  point.cpp  point.hpp  spot.cpp  spot.hpp
